actix-macros/tests/trybuild/main-02-only-async.stderr
error: the async keyword is missing from the function declaration
 --> tests/trybuild/main-02-only-async.rs:2:1
  |
2 | fn main() {
  | ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/trybuild/main-02-only-async.rs:4:2
  |
4 | }
  |  ^ consider adding a `main` function to `$DIR/tests/trybuild/main-02-only-async.rs`
