actix-macros/tests/trybuild/main-02-only-async.rs
#[actix_rt::main]
fn main() {
    futures::future::ready(()).await
}
